# Hackaton

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  DOCKER.md  PROJECT_SKELETON.md  README.md  SETUP.md  TEAM.md  changelogerrado.md  compose.prod.yaml  compose.yaml  pOlITICA_ACordo.py  pOlITICA_ACordo_IA.txt  pOlITICA_ACordo_pipeLINE.txt
src/api/: .dockerignore  Dockerfile  README.md  db.py  pyproject.toml
src/api/analytics/: __init__.py  historical.py  metrics.py  semantic.py
src/api/app/: __init__.py  db.py  main.py
src/api/app/analytics/: __init__.py  historical.py  semantic.py
src/api/app/core/: config.py
src/api/app/llm/: __init__.py  client.py
src/api/app/models/: case.py  outcome.py  recommendation.py
src/api/app/routers/: cases.py  dashboard.py  health.py  outcomes.py  recommendations.py
src/api/app/schemas/: __init__.py  case.py  dashboard.py  outcome.py  recommendation.py
src/api/app/services/: __init__.py  agreement_policy_v5.py  case_maintenance.py  case_normalization.py  case_processing.py  case_sanitizer.py  (+8 more)
src/api/core/: config.py
src/api/llm/: __init__.py  client.py
src/api/models/: __init__.py  outcome.py  recommendation.py
src/api/routers/: __init__.py  cases.py  metrics.py  outcomes.py  recommendations.py
src/api/schemas/: __init__.py  case.py  outcome.py  recommendation.py
src/api/scripts/: sanitize_cases.py
src/api/services/: __init__.py  decision_engine.py  extractor.py  judge.py  justifier.py  policy.py  recommendation_pipeline.py  value_estimator.py
src/api/tests/: __init__.py  test_smoke.py
(+83 files in other folders)
